# fireviewer

./: .gitattributes  .gitignore  .gitleaksignore  ASSET_PROVENANCE.md  CONTRIBUTING.md  LICENSE-DOCS.md  LICENSES.md  README.md  SECURITY.md
services/fire-viewer-agent-worker/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/fire-viewer-agent-worker/deploy/: runpod-endpoint.example.json  runpod-pod.example.json
services/fire-viewer-agent-worker/docs/: BACKEND_INTEGRATION.md  RUNPOD_BENCHMARK.md
services/fire-viewer-agent-worker/sandbox/: research_sandbox.c
services/fire-viewer-agent-worker/scripts/: prefetch_models.py  setup_spatial_registration_roma_cuda13.ps1  setup_spatial_train_cuda13.ps1
services/fire-viewer-agent-worker/src/firewarning_worker/: __init__.py  adapters.py  boot_clock.py  bootstrap.py  bootstrap_status.py  contracts.py  handler.py  media_fetcher.py  memory_manager.py  model_provisioning.py  model_registry.py  pod_server.py  pod_validation.py  research_agent.py  research_broker.py  research_client.py  research_rpc.py  research_service.py  roma_registration.py  seccomp_probe.py  security.py  session_runner.py  transformers_adapters.py  v2_runner.py  validation.py
services/fire-viewer-agent-worker/tests/: test_bootstrap_status.py  test_contracts.py  test_contracts_v2.py  test_corpus_pipeline.py  test_deployment_contract.py  test_die_operational_corpus.py  test_die_photo_evaluation.py  test_fasdd_acquisition.py  test_handler.py  test_massif_reference.py  test_model_bootstrap.py  test_pod_server.py  test_pod_validation.py  test_registry.py  test_research_agent.py  test_research_broker.py  test_research_service.py  test_roma_registration.py  test_session_runner.py  test_spatial_train_qwen.py  test_spatial_training_setup.py  test_train_rtdetr.py  test_v2_situation_report.py  test_wikimedia_corpus.py
services/fire-viewer-agent-worker/training/: README.md  __init__.py  corpus_pipeline.py  dataset_inventory.py  die_operational_corpus.py  die_photo_evaluation.py  fasdd_acquisition.py  massif_reference.py  spatial_register_roma.py  spatial_train_qwen.py  spatial_training_setup.py  train_rtdetr.py  wikimedia_corpus.py
services/fire-viewer-agent-worker/training/corpus/: classes.json  cross-view-registration-manifest.schema.json  fasdd-acquisition-report.json  fire-pointing-manifest.schema.json  manifest.schema.json  pyro-sdis-ingestion-report.json  sources.json  spatial-grounding-sources.json  wikimedia-acquisition-report.json  wikimedia_lots.json
services/fire-viewer-backend/: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  QUALITY_REPORT.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  vercel.json
services/fire-viewer-backend/api/: index.py
services/fire-viewer-backend/docs/: AGENT_RESEARCH_SOURCES.md  ARCHITECTURE.md  DEPLOYMENT_VERCEL_NEON.md  INTEGRATION.md  POSTGIS_TARGET.md  RUNBOOK_BACKUP_RESTORE.md
services/fire-viewer-backend/migrations/: env.py
services/fire-viewer-backend/migrations/versions/: a3c9e5d7b620_zone_publication_state_machine.py  a3d7e9f1b520_agent_daily_activity_zone.py  a4e9c2f7d610_normalize_asset_schema_contract.py  a8c1d4e7f920_cdc_v2_evidence_and_spatial_profile.py  ab7fe6f3a550_initial_incident_core.py  b4d1e6f9a730_harden_admin_zone_registry.py  b4e8f2a6c730_public_contribution_upload.py  b8d4f6a9c210_incident_active_zone_review.py  c2e8f4a6b910_postgresql_postgis_runtime.py  c6d4f13a9b20_spatial_zone_contract.py  c9f1a7d4e620_unity_remote_tile_package_files.py  d2a6e8f1b430_allow_tiled_package_manifest.py  d7c5e3a1b920_repair_spatial_package_file_kind_width.py  d9e4c2a8f610_direct_zone_uploads_and_information.py  (+8 more)
services/fire-viewer-backend/openapi/: openapi.json
services/fire-viewer-backend/tests/: conftest.py  test_activity_zone_quality.py  test_admin_auth.py  test_admin_incident_creation_api.py  test_admin_incident_workspaces_api.py  test_admin_observability_api.py  test_admin_spatial_package_import_api.py  test_admin_spatial_package_registry.py  test_admin_spatial_package_workflow_api.py  test_admin_v2_dashboard_api.py  test_admin_v2_operational_map_api.py  test_admin_v2_representations_api.py  test_admin_zones_api.py  test_agent_batches_api.py  test_agent_contract_v2.py  test_agent_dispatch_tick_api.py  test_agent_dispatcher.py  test_agent_intelligence_v2.py  test_agent_operations_api.py  test_agent_research_source_registry.py  test_agent_runpod_pod_transport.py  test_agent_source_packages.py  test_agent_source_research.py  test_alembic_cli.py  test_backup.py  test_cdc_v2_evidence_policy.py  test_demo_contract_artifacts.py  test_demo_seed.py  test_detection.py  test_direct_zone_workflow.py  test_http_guards.py  test_incident_gallery.py  test_incident_spatial_review_api.py  test_matching.py  test_public_contributions.py  test_public_discovery_api.py  test_public_incident_view_api.py  test_public_visibility_policy.py  test_reviews.py  test_runtime_infrastructure.py  (+8 more)
(+402 files in other folders)
