[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firewarning-agent-worker"
version = "0.1.0"
description = "Fail-closed RunPod worker for FireWarning media analysis"
requires-python = ">=3.11,<3.14"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
  "pydantic==2.13.4",
]

[project.optional-dependencies]
runtime = [
  "accelerate==1.14.0",
  "einops==0.8.2",
  "huggingface-hub==0.36.2",
  "httpx==0.28.1",
  "pillow==12.3.0",
  "qwen-vl-utils==0.0.14",
  "runpod==1.10.1",
  "safetensors==0.8.0",
  "transformers==4.57.6",
  "vercel==0.7.0",
]
roma-registration = [
  "einops==0.8.2",
  "kornia==0.8.3",
  "numpy==2.4.6",
  "opencv-python-headless==4.13.0.92",
  "psutil==7.2.2",
]
corpus = [
  "datasets==4.8.5",
  "huggingface-hub==0.36.2",
  "httpx==0.28.1",
  "imagehash==4.3.2",
  "openpyxl==3.1.5",
  "pillow==12.3.0",
]
spatial-training = [
  "huggingface-hub==0.36.2",
  "httpx==0.28.1",
  "numpy==2.4.6",
  "pillow==12.3.0",
  "pyproj==3.7.2",
  "rasterio==1.4.4",
]
spatial-train = [
  "accelerate==1.14.0",
  "peft==0.19.1",
  "psutil==7.2.2",
  "qwen-vl-utils==0.0.14",
  "safetensors==0.8.0",
  "transformers==4.57.6",
]
training = [
  "accelerate==1.14.0",
  "albumentations==2.0.8",
  "datasets==4.8.5",
  "evaluate==0.4.6",
  "huggingface-hub==0.36.2",
  "imagehash==4.3.2",
  "pillow==12.3.0",
  "pycocotools==2.0.10",
  "safetensors==0.8.0",
  "torchmetrics==1.8.2",
  "transformers==4.57.6",
]
dev = [
  "pytest==9.0.3",
  "ruff==0.15.21",
  "mypy==2.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
firewarning_worker = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers --strict-config"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "training"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["firewarning_worker"]

[[tool.mypy.overrides]]
module = ["cv2.*", "kornia.*", "romatch.*", "torch.*", "torchvision.*", "transformers.*", "PIL.*", "qwen_vl_utils.*", "httpx.*", "runpod.*", "flash_attn.*"]
ignore_missing_imports = true
